# Lempel-Ziv-78

./: .gitignore  CMakeLists.txt  README.md  draw.ipynb  main.cpp  test.sh
data/: text.lz78  word.lz78
include/: lz78d.hpp  lz78e.hpp  util.hpp
includes/: lz78d.hpp  lz78e.hpp  util.hpp
